new changes for added qr to invoice

--- a/index-svg.html
+++ b/index-svg.html
@@ -13,35 +13,32 @@
     <g id="qrcode"/>
   </svg>
   <script type="text/javascript">
-  var qrcode = new QRCode(document.getElementById("qrcode"), {
-      width : 100,
-      height : 100,
-      useSVG: true
-  });
+    var qrcode = new QRCode(document.getElementById("qrcode"), {
+        width : 100,
+        height : 100,
+        useSVG: true
+    });
 
-  function makeCode () {		
-      var elText = document.getElementById("text");
+    function makeCode () {		
+        var elText = document.getElementById("text");
+        if (!elText.value) {
+            alert("Input a text");
+            elText.focus();
+            return;
+        }
+        qrcode.makeCode(elText.value);
+    }
 
-      if (!elText.value) {
-          alert("Input a text");
-          elText.focus();
-          return;
-      }
+    makeCode();
 
-      qrcode.makeCode(elText.value);
-  }
-
-  makeCode();
-
-  $("#text").
-      on("blur", function () {
-          makeCode();
-      }).
-      on("keydown", function (e) {
-          if (e.keyCode == 13) {
-              makeCode();
-          }
-      });
+    $("#text").on("blur", function () {
+        makeCode();
+    }).
+    on("keydown", function (e) {
+        if (e.keyCode == 13) {
+            makeCode();
+        }
+    });
     </script>
   </body>
 </html>
