--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Invoice #30</title>
 		<meta charset="UTF-8">
-    		<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -45,32 +45,7 @@
 						<p>(809)-555-3333</p>
 					</td>
 					<td style="width: 50%; height: 30px;" colspan="2" rowspan="2">
-						<script type="text/javascript">
-							const invoice_id = Math.random();
-							var qrcode = new QRCode(invoice_id, {
-								width : 100,
-								height : 100
-							});
-							function makeCode () {		
-								var elText = document.getElementById("text");
-								if (!elText.value) {
-									alert("Input a text");
-									elText.focus();
-									return;
-								}
-								qrcode.makeCode(elText.value);
-							}
-							makeCode();
-							$("#text").
-								on("blur", function () {
-									makeCode();
-								}).
-								on("keydown", function (e) {
-									if (e.keyCode == 13) {
-										makeCode();
-								}
-							});
-						</script>
+						<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
 					</td>
 				</tr>
 				<tr></tr>
@@ -134,6 +109,32 @@
 			let element   = document.getElementById('date_id');
 			element.value = new Date();
 			console.log(element);
+		</script>
+		<script type="text/javascript">
+			const invoice_id = Math.random();
+			var qrcode = new QRCode(invoice_id, {
+				width : 100,
+				height : 100
+			});
+			function makeCode () {		
+				var elText = document.getElementById("text");
+				if (!elText.value) {
+					alert("Input a text");
+					elText.focus();
+					return;
+				}
+				qrcode.makeCode(elText.value);
+			}
+			makeCode();
+			$("#text").
+				on("blur", function () {
+					makeCode();
+				}).
+				on("keydown", function (e) {
+					if (e.keyCode == 13) {
+						makeCode();
+				}
+			});
 		</script>
 	</body>
 </html>
