--- a/index.html
+++ b/index.html
@@ -14,46 +14,49 @@
 	<body style="padding: 10px;">
 		<table class="table" style="border-collapse: collapse; width: 100%; height: 83px;">
 			<tbody>
-				<tr style="height: 37px;">
-					<td style="width: 20%; height: 11px;">
-						<p></p>
-						<p></p>
+				<tr>
+					<td class="col-md-3" >
+						<div style="white-space: nowrap;"><strong>Code:</strong> #<input id="qr_code" type="text" disabled></div>
+						<div style="white-space: nowrap !important;"><strong>    Date:</strong>  <span id="date_id"> 24/10/2023</span></p>
 					</td>
-					<td style="width: 50%; height: 11px;" colspan="3">
+					<td class="col-md-6">
 						<blockquote>
 							<h1 style="text-align: center;"><strong>Invoice</strong></h1>
 						</blockquote>
 					</td>
-					<td style="width: 30%; height: 11px;"><img src="https://content.wepik.com/statics/30190099/preview-page0.jpg" alt="" width="94" height="94" style="display: block; margin-left: auto; margin-right: auto;" /></td>
+					<td class="col-md-3">
+						<div class="text-right">
+							<img src="https://content.wepik.com/statics/30190099/preview-page0.jpg" alt="" width="94" height="94" style="display: block; margin-left: auto; margin-right: auto;" />
+						</div>
+					</td>
 				</tr>
-				<tr style="height: 35px;">
-					<td style="width: 98.4924%; height: 18px; text-align: right;" colspan="5"><strong>Date:</strong> <p id="date_id"> 24/10/2023</p></td>
-				</tr>
+				<!-- <tr style="height: 35px;">
+					<td style="width: 98.4924%; height: 18px; text-align: right;" colspan="5"></td>
+				</tr> -->
 				<tr style="height: 24px;">
-					<td style="width: 40.9358%; height: 24px;" colspan="2"><strong>Customer:</strong></td>
+					<td class="col-md-4"><strong>Customer:</strong></td>
 					<!-- <td style="width: 13.639%; height: 24px;" rowspan="3"></td> -->
-					<td style="width: 43.9176%; height: 24px;" colspan="2"><strong>Company</strong></td>
-					<td style="width: 13.639%; height: 24px;" colspan="2"><strong> Information</strong></td>
+					<td class="col-md-4"><strong>Company</strong></td>
+					<td class="col-md-4"><strong> Information</strong></td>
 				</tr>
 				<tr style="height: 18px;">
-					<td style="width: 50%; height: 30px;" colspan="2" rowspan="2">
+					<td class="col-md-3">
 						<p>EDWIN SANTANA</p>
 						<p></p>
 					</td>
-					<td style="width: 50%; height: 30px;" colspan="2" rowspan="2">
+					<td class="col-md-3">
 						<p>CASCABELES, SRL.</p>
 						<p>CALLE PARADA VIEJA, #40, PONTEZUELA.</p>
 						<p>(809)-555-3333</p>
 					</td>
-					<td style="width: 50%; height: 30px;" colspan="2" rowspan="2">
-						<input id="qr_code" type="hidden"></div>
+					<td class="col-md-3">
 						<div id="qrcode" style="width:100%; height:100%;"></div>
 					</td>
 				</tr>
 				<tr></tr>
 			</tbody>
 		</table>
-		<h3 style="padding-top:25px;padding-bottom:25px;">Detail:</h3>
+		<h4 style="padding-top:25px;padding-bottom:25px;">Detail:</h4>
 		<table class="table" border="1" style="border-collapse: collapse; width: 99.9978%; height: 20px;">
 			<tbody>
 				<tr style="border: 1px red solid;">
