--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<script type="text/javascript" src="./js/qrcode.js"></script>
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		<script src="./js/index.js" ></script>
 		<!-- <script type="text/javascript" src="./jquery.min.js"></script> -->
 	</head>
 	<body style="padding: 10px;">
@@ -18,6 +19,7 @@
 					<td class="col-md-3" >
 						<div style="white-space: nowrap;"><strong>Code:</strong> #<input id="qr_code" type="text" disabled></div>
 						<div style="white-space: nowrap !important;"><strong>    Date:</strong>  <span id="date_id"> 24/10/2023</span></p>
+						<div style="white-space: nowrap !important;"><strong>    Time:</strong>  <span id="time_id"> 22:01 PM</span></p>
 					</td>
 					<td class="col-md-6">
 						<blockquote>
@@ -56,30 +58,38 @@
 				<tr></tr>
 			</tbody>
 		</table>
-		<h4 style="padding-top:25px;padding-bottom:25px;">Detail:</h4>
+		
 		<table class="table" border="1" style="border-collapse: collapse; width: 99.9978%; height: 20px;">
-			<tbody>
+			<thead>
 				<tr style="border: 1px red solid;">
-					<td style="width: 5.11236%; height: 5px;">
-						<h5><span style="color: #ff0000;">ID</span></h5>
+					<td class="text-center" style="width: 5%;">
+						<h6><span style="color: #ff0000;">ID</span></h6>
 					</td>
-					<td style="width: 21.6854%; height: 5px;" >
-						<h5><span style="color: #ff0000;">DESCRIPTION</span></h5>
+					<td class="text-left" style="width: 30%;" >
+						<h6><span style="color: #ff0000;">DESCRIPTION</span></h6>
 					</td>
-					<td style="width: 23.2022%; height: 5px;">
-						<h5><span style="color: #ff0000;">UNIT</span></h5>
+					<td class="text-center" style="width: 5%;">
+						<h6><span style="color: #ff0000;">UNIT</span></h6>
 					</td>
-					<td style="width: 10%;">
-						<h5><span style="color: #ff0000;">ITBIS</span></h5>
+					<td class="text-center" style="width: 10%;">
+						<h6><span style="color: #ff0000;">ITBIS</span></h6>
 					</td>
-					<td style="width: 20%; height: 5px;">
-						<h5><span style="color: #ff0000;">QUANTITY</span></h5>
+					<td class="text-center" style="width: 10%;" >
+						<h6><span style="color: #ff0000;">QUANTITY</span></h6>
 					</td>
-					<td style="width: 20%; height: 5px;">
-						<h5><span style="color: #ff0000;">PRICE</span></h5>
+					<td class="text-right" style="width: 10%;">
+						<h6><span style="color: #ff0000;">PRICE</span></h6>
+					</td>
+					<td style="width: 20%;">
+						<h6><span style="color: #ff0000;">SUB-TOTAL</span></h6>
+					</td>
+					<td style="width: 20%;">
+						<h6><span style="color: #ff0000;">TOTAL</span></h6>
 					</td>
 				</tr>
-				<tr style="height: 10px;">
+			</thead>
+			<tbody id="detail_invoice_id">
+				<!-- <tr style="height: 10px;">
 					<td style="width: 5.11236%; height: 10px;">1</td>
 					<td style="width: 21.6854%; height: 10px;">HELADO</td>
 					<td style="width: 23.2022%; height: 10px;">unit</td>
@@ -88,61 +98,25 @@
 					<td style="width: 20%; height: 10px;">
 						<p>25.00</p>
 					</td>
+				</tr> -->
+			</tbody>
+		</table>
+		<table class="table">
+			<tbody>
+				<tr>
+					<td class="text-end" width="90%">ITBIS:</td>
+					<td id="itbis" class="text-end">0.00</td>
 				</tr>
 				<tr>
-					<td colspan="4" style="width: 60%;" rowspan="3"></td>
-					<td style="width: 20%;"><strong>Sub-Total:</strong></td>
-					<td style="width: 20%;">
-						<p>410.00</p>
-					</td>
+					<td class="text-end" width="90%">SUB-TOTAL:</td>
+					<td id="sub_total" class="text-end">0.00</td>
 				</tr>
 				<tr>
-					<td style="width: 20%;"><strong>Itbis:</strong></td>
-					<td style="width: 20%;">
-						<p>18.00</p>
-					</td>
-				</tr>
-				<tr>
-					<td style="width: 20%;"><strong>Total:</strong></td>
-					<td style="width: 20%;">
-						<p>500.00</p>
-					</td>
+					<td class="text-end" width="90%">TOTAL:</td>
+					<td id="total" class="text-end">0.00</td>
 				</tr>
 			</tbody>
 		</table>
-		<script>
-			let element   = document.getElementById('date_id');
-			element.value = new Date();
-			console.log(element);
-		</script>
-		<script type="text/javascript">
-			// const invoice_id = Math.random();
-			var qrcode = new QRCode(document.getElementById("qrcode"), {
-				width : 100,
-				height : 100
-			});
-			function makeCode () {		
-				const invoice_id = parseInt(Math.random() * (10000000 - 0) + 0);
-				console.log('invoice_id',invoice_id);
-				document.getElementById("qr_code").value = invoice_id;
-				var elText = document.getElementById("qr_code");
-				if (!elText.value) {
-					alert("Input a text");
-					elText.focus();
-					return;
-				}
-				qrcode.makeCode(elText.value);
-			}
-			makeCode();
-			$("#text").
-				on("blur", function () {
-					makeCode();
-				}).
-				on("keydown", function (e) {
-					if (e.keyCode == 13) {
-						makeCode();
-				}
-			});
-		</script>
+		
 	</body>
 </html>
